objects/X9902Summary__c.object
<CustomObject>
    <fields>
        <fullName>HUDSection10TOTAL__c</fullName>
        <description>Calculates the total based on the count of individuals or households benefiting from various assistance programs and counseling services</description>
        <formula>HUDOneononeCounseling__c +  HUDReceivedInformationonFair__c +  HUDSustainableHouseholdBudget__c +  HUDHouseholdsImprovedFinancial__c +  HUDHouseholdsGainedAccessto__c +  HUDGainedAccesstoNonHousing__c +  HUDHomelessobtainedHousing__c +  HUDHouseholdsReceivedRental__c +  HUDHouseholdsImprovedLiving__c +  HUDPrepurchaseHomebuyingCounseling__c +  HUDHouseholdsReceivedReverseMortgage__c +  HUDDisasterRecoveryNonhousing__c +  HUDDisasterRecoveryHousingResources__c +  HUDEmergencyPreparednessPlan__c +  HUDForwardMortgageModImproved__c +  HUDPreventedReverseMortgageDefault__c +  HUDPreventedForwardMortgageDefault__c +  HUDForwardModImprovedFinancial__c + HUDNonDelinquencyPostPurchaseCoun__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically calculates the total by summing the counts of individuals or households benefiting from different assistance programs and counseling services</inlineHelpText>
        <label>HUD Section 10 TOTAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDSection3TOTAL__c</fullName>
        <description>This field calculates the total number of respondents for Section 3 based on the number of respondents who identified as Hispanic, non-Hispanic, and those who chose not to respond.</description>
        <formula>HUDHispanic__c + HUDNotHispanic__c + HUDChoseNottoRespond__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically calculates the total number of respondents for Section 3 by summing the counts of respondents</inlineHelpText>
        <label>HUD Section 3 TOTAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDSection4TOTAL__c</fullName>
        <description>This field calculates the total number of respondents for Section 4 based on the count of respondents belonging to various racial categories</description>
        <formula>HUDAmericanIndianAlaskanNative__c +  
HUDAsian__c +  
HUDBlackorAfricanAmerican__c + 
HUDNativeHawaiian__c	+
HUDWhite__c+
HUDMoreThanoneRace__c+
HUDMultiRaceChosenottorespond__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically calculates the total number of respondents for Section 4 by summing the counts of respondents belonging to different racial categories.</inlineHelpText>
        <label>HUD Section 4 TOTAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDSustainableHouseholdBudget__c</fullName>
        <description>Indicates whether the individual achieved a sustainable household budget.</description>
        <inlineHelpText>Households for whom counselor developed a sustainable household budget through the provision of financial management and/or budget services.</inlineHelpText>
        <label>HUD Sustainable Household Budget </label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDWhite__c</fullName>
        <description>Indicates whether the individual identifies as White.</description>
        <inlineHelpText>Select this option if the individual identifies as being of White descent.</inlineHelpText>
        <label>HUD White</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDX100AMI__c</fullName>
        <description>Indicates individuals or households whose income exceeds 100% of the Area Median Income.</description>
        <inlineHelpText>Select this option if the individual or household&apos;s income exceeds 100% of the Area Median Income.</inlineHelpText>
        <label>HUD &gt; 100% AMI</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDX3049ofAMI__c</fullName>
        <description>Indicates individuals or households whose income falls between 30% and 49% of the Area Median Income.</description>
        <inlineHelpText>Select this option if the individual or household&apos;s income is between 30% and 49% of the Area Median Income.</inlineHelpText>
        <label>HUD 30 - 49% of AMI</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDX30ofAreaMedianIncomeAMI__c</fullName>
        <description>Indicates individuals or households whose income falls below 30% of the Area Median Income.</description>
        <inlineHelpText>Select this option if the individual or household&apos;s income is less than 30% of the Area Median Income.</inlineHelpText>
        <label>HUD &lt; 30% of Area Median Income (AMI) </label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDX5079ofAMI__c</fullName>
        <description>Indicates individuals or households whose income falls between 50% and 79% of the Area Median Income.</description>
        <inlineHelpText>Select this option if the individual or household&apos;s income is between 50% and 79% of the Area Median Income.</inlineHelpText>
        <label>HUD 50 - 79% of AMI</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUDX80100ofAMI__c</fullName>
        <description>Indicates individuals or households whose income falls between 80% and 100% of the Area Median Income.</description>
        <inlineHelpText>Select this option if the individual or household&apos;s income is between 80% and 100% of the Area Median Income.</inlineHelpText>
        <label>HUD 80 - 100% of AMI</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hispanic__c</fullName>
        <description>Indicates whether the individual identifies as Hispanic or Latino</description>
        <inlineHelpText>Select this option if the individual identifies as being of Hispanic or Latino origin.</inlineHelpText>
        <label>Hispanic</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HomeMaintenance__c</fullName>
        <description>Indicates whether the individual received education or assistance related to home maintenance.</description>
        <inlineHelpText>Select this option if the individual received education or assistance on topics related to home maintenance, such as repairs, renovations, or energy efficiency upgrades. (Non-Delinquency Post-Purchase)</inlineHelpText>
        <label>Home Maintenance</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HomelessAssistance__c</fullName>
        <description>Indicates whether the individual received assistance related to homelessness.</description>
        <inlineHelpText>Select this option if the individual received assistance for homelessness, such as emergency shelter, housing vouchers, or support services.</inlineHelpText>
        <label>Homeless Assistance</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HomelessnessPreventionWorkshop__c</fullName>
        <description>Indicates that the individual has completed a workshop focused on homelessness prevention.</description>
        <inlineHelpText>Completed homelessness prevention workshop.</inlineHelpText>
        <label>Homelessness Prevention Workshop </label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HomelessobtainedHousing__c</fullName>
        <description>Indicates whether homeless individuals obtained housing.</description>
        <inlineHelpText>Homeless or potentially homeless households that obtained temporary or permanent housing after receiving Housing Counseling Services.</inlineHelpText>
        <label>Homeless obtained Housing</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Householddoesnotliveinaruralarea__c</fullName>
        <description>Indicates that the household does not reside in a rural area</description>
        <inlineHelpText>Select this option if the household does not reside in a rural area</inlineHelpText>
        <label>Household does not live in a rural area</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HouseholdisLimitedEnglishProficient__c</fullName>
        <description>Indicates that the household has limited proficiency in the English language.</description>
        <inlineHelpText>Select this option if the household has limited proficiency in the English language</inlineHelpText>
        <label>Household is Limited English Proficient</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Householdlivesinaruralarea__c</fullName>
        <description>Indicates that the household resides in a rural area.</description>
        <inlineHelpText>Select this option if the household resides in a rural area</inlineHelpText>
        <label>Household lives in a rural area</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HouseholdsGainedAccesstoResources__c</fullName>
        <description>Indicates whether the household gained access to resources.</description>
        <inlineHelpText>Households that gained access to resources to help them improve their housing situation (e.g. down payment assistance, rental assistance, utility assistance, etc.) after receiving Housing Counseling Services.</inlineHelpText>
        <label>Households Gained Access to Resources </label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HouseholdsImprovedFinancialCapacity__c</fullName>
        <description>Indicates whether the household&apos;s financial capacity has improved.</description>
        <inlineHelpText>Households that improved their financial capacity (e.g.increased discretionary income, decreased debt load,increased savings, increased credit score) after receiving Housing Counseling Services.</inlineHelpText>
        <label>Households Improved Financial Capacity </label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HouseholdsImprovedLivingConditions__c</fullName>
        <description>Indicates whether households have improved living conditions.</description>
        <inlineHelpText>Households that received rental counseling and improved living conditions after receiving Housing Counseling Services.</inlineHelpText>
        <label>Households Improved Living Conditions</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HouseholdsReceivedRentalCounselling__c</fullName>
        <description>Indicates whether households received counseling related to rental housing.</description>
        <inlineHelpText>Households that received rental counseling and avoided eviction after receiving Housing Counseling Services.</inlineHelpText>
        <label>Households Received Rental Counselling</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HouseholdsReceivedReverseMortgage__c</fullName>
        <description>Indicates whether households received assistance related to reverse mortgages.</description>
        <inlineHelpText>Households that received reverse mortgage counseling and obtained a Home Equity Conversion Mortgage (HECM after receiving Housing Counseling Services.</inlineHelpText>
        <label>Households Received Reverse Mortgage</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitedEnglishProficienChoseNotToRespond__c</fullName>
        <description>Indicates that the household declined to provide information about their English proficiency.</description>
        <inlineHelpText>Select this option if the household chose not to disclose information</inlineHelpText>
        <label>Chose Not To Respond </label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MoreThanoneRace__c</fullName>
        <label>More Than one Race</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MortgageDelinquencyWorkshop__c</fullName>
        <description>Indicates that the individual has completed a workshop on mortgage delinquency.</description>
        <inlineHelpText>Completed resolving or preventing mortgage delinquency workshop.</inlineHelpText>
        <label>Mortgage Delinquency Workshop</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MultiRaceChosenottorespond__c</fullName>
        <description>Indicates that the individual declined to provide information about their race or ethnicity.</description>
        <inlineHelpText>Select this option if the individual chose not to disclose their race or ethnicity.</inlineHelpText>
        <label>Chose Not To Respond </label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NativeHawaiian__c</fullName>
        <description>Indicates whether the individual identifies as Native Hawaiian.</description>
        <inlineHelpText>Select this option if the individual identifies as being of Native Hawaiian descent.</inlineHelpText>
        <label>Native Hawaiian</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NonDelinquencyPostPurchaseCounseling__c</fullName>
        <description>Indicates whether individuals received counseling related to post-purchase homeownership.</description>
        <inlineHelpText>Households that received non-delinquency post-purchase counseling that were able to improve home conditions or home affordability after receiving Housing CounselingServices.</inlineHelpText>
        <label>Non-Delinquency Post-Purchase Counseling</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NonDelinquencyPostPurchaseWorkshop__c</fullName>
        <description>Indicates that the individual has completed a post-purchase workshop focusing on non-delinquency issues.</description>
        <inlineHelpText>Completed non-delinquency post-purchase workshop,including home maintenance and/or financial management for homeowners.</inlineHelpText>
        <label>Non-Delinquency Post-Purchase Workshop</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NotHispanic__c</fullName>
        <description>ndicates that the individual does not identify as Hispanic or Latino.</description>
        <inlineHelpText>Select this option if the individual does not identify as being of Hispanic or Latino origin.</inlineHelpText>
        <label>Not Hispanic</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NotLimitedEnglishProficient__c</fullName>
        <description>Indicates that the household does not have limited proficiency in the English language.</description>
        <inlineHelpText>Select this option if the household does not have limited proficiency in the English language</inlineHelpText>
        <label>Not Limited English Proficient </label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OneononeCounseling__c</fullName>
        <description>Indicates whether the individual received one-on-one counseling.</description>
        <inlineHelpText>Households that received one-on-one counseling that also received group education services.</inlineHelpText>
        <label>One-on-one Counseling</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrepurchaseHomebuyingCounseling__c</fullName>
        <description>Indicates whether individuals received counseling related to homebuying.</description>
        <inlineHelpText>Households that received prepurchase/homebuying counseling and purchased housing after receiving Housing Counseling Services.</inlineHelpText>
        <label>Prepurchase/Homebuying Counseling</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrepurchaseHomebuying__c</fullName>
        <description>Indicates whether the individual received education or assistance related to homebuying.</description>
        <inlineHelpText>Select this option if the individual received education or assistance on topics related to purchasing a home, such as mortgage options, homebuyer education, or down payment assistance programs.</inlineHelpText>
        <label>Prepurchase/Homebuying</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prepurchasehomebuyereducationworkshop__c</fullName>
        <description>Indicates that the individual has completed a prepurchase homebuyer education workshop.</description>
        <inlineHelpText>Completed pre-purchase homebuyer education workshop.</inlineHelpText>
        <label>Prepurchase homebuyer education workshop</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreventedForwardMortgageDefault__c</fullName>
        <description>Indicates whether individuals prevented a default on a forward mortgage.</description>
        <inlineHelpText>Select this option if individuals successfully avoided defaulting on a forward mortgage by taking appropriate actions.</inlineHelpText>
        <label>Prevented Forward Mortgage Default</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreventedReverseMortgageDefault__c</fullName>
        <description>Indicates whether individuals prevented a default on a reverse mortgage.</description>
        <inlineHelpText>Select this option if individuals successfully avoided defaulting on a reverse mortgage by taking appropriate actions.</inlineHelpText>
        <label>Prevented Reverse Mortgage Default </label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReceivedInformationonFairHousing__c</fullName>
        <description>Indicates whether the individual received information on fair housing.</description>
        <inlineHelpText>Households that received information on fair housing, fair lending and/or accessibility rights.</inlineHelpText>
        <label>Received Information on Fair Housing </label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RentalTopics__c</fullName>
        <description>Indicates whether the individual received education or assistance related to renting a home.</description>
        <inlineHelpText>Select this option if the individual received education or assistance on topics related to renting a home, such as tenant rights, lease agreements, or rental assistance programs.</inlineHelpText>
        <label>Rental Topics</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportPeriodId__c</fullName>
        <description>Unique identifier assigned to a specific reporting period.</description>
        <inlineHelpText>Select the appropriate option from the picklist to specify the reporting period corresponding to the record.</inlineHelpText>
        <label>Report Period Id</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>Quarter 1</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Quarter 2</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Quarter 3</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Quarter 4</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReverseMortgageDelinquencyorDefault__c</fullName>
        <description>Indicates whether the individual experienced delinquency or default on a reverse mortgage.</description>
        <inlineHelpText>Select this option if the individual experienced delinquency or default on a reverse mortgage.</inlineHelpText>
        <label>Reverse Mortgage Delinquency or Default </label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReverseMortgage__c</fullName>
        <description>Indicates whether the individual received information or assistance related to reverse mortgages.</description>
        <inlineHelpText>Select this option if the individual received information or assistance related to reverse mortgages.</inlineHelpText>
        <label>Reverse Mortgage</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RuralChosenottorespond__c</fullName>
        <description>Indicates that the household declined to provide information about their residence type.</description>
        <inlineHelpText>Select this option if the household chose not to disclose information</inlineHelpText>
        <label>Chose Not To Respond</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section10TOTAL__c</fullName>
        <description>Calculates the total based on the count of individuals or households benefiting from various assistance programs and counseling services</description>
        <formula>OneononeCounseling__c +  ReceivedInformationonFairHousing__c +  SustainableHouseholdBudget__c +  HouseholdsImprovedFinancialCapacity__c +  HouseholdsGainedAccesstoResources__c +  GainedAccesstoNonHousingResources__c +  HomelessobtainedHousing__c +  HouseholdsReceivedRentalCounselling__c +  HouseholdsImprovedLivingConditions__c +  PrepurchaseHomebuyingCounseling__c +  HouseholdsReceivedReverseMortgage__c +  DisasterRecoveryNonhousingResources__c +  DisasterRecoveryHousingResources__c +  EmergencyPreparednessPlan__c +  ForwardMortgageModImprovedFinancials__c +  PreventedReverseMortgageDefault__c +  PreventedForwardMortgageDefault__c +  ForwardModImprovedFinancialCapacity__c+NonDelinquencyPostPurchaseCounseling__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically calculates the total by summing the counts of individuals or households benefiting from different assistance programs and counseling services</inlineHelpText>
        <label>Section 10 TOTAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section3TOTAL__c</fullName>
        <description>This field calculates the total number of respondents for Section 3 based on the number of respondents who identified as Hispanic, non-Hispanic, and those who chose not to respond.</description>
        <formula>Hispanic__c + NotHispanic__c + ChoseNottoRespond__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically calculates the total number of respondents for Section 3 by summing the counts of respondents</inlineHelpText>
        <label>Section 3 TOTAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section4TOTAL__c</fullName>
        <description>This field calculates the total number of respondents for Section 4 based on the count of respondents belonging to various racial categories</description>
        <formula>AmericanIndianAlaskanNative__c +  
Asian__c +  
BlackorAfricanAmerican__c + 
NativeHawaiian__c	+
White__c+
MoreThanoneRace__c+
MultiRaceChosenottorespond__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically calculates the total number of respondents for Section 4 by summing the counts of respondents belonging to different racial categories.</inlineHelpText>
        <label>Section 4 TOTAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section_8_TOTAL__c</fullName>
        <description>This field calculates the total number of respondents for Section 8 based on the completion of various workshops related to financial literacy, housing, homelessness prevention, disaster preparedness, and other relevant topics.</description>
        <formula>Completedfinancialliteracyworkshop__c +  Completedpredatorylending__c +  Completedfairhousingworkshop__c +  HomelessnessPreventionWorkshop__c +  Completedrentalworkshop__c +  Prepurchasehomebuyereducationworkshop__c +  NonDelinquencyPostPurchaseWorkshop__c +  MortgageDelinquencyWorkshop__c +  CompletedDisasterPreparednessWorkshop__c +  DisasterRecoveryWorkshop__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically calculates the total number of respondents for Section 8 by summing the counts of individuals who have completed workshops</inlineHelpText>
        <label>Section 8 TOTAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SustainableHouseholdBudget__c</fullName>
        <description>Indicates whether the individual achieved a sustainable household budget.</description>
        <inlineHelpText>Households for whom counselor developed a sustainable household budget through the provision of financial management and/or budget services.</inlineHelpText>
        <label>Sustainable Household Budget </label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>White__c</fullName>
        <description>Indicates whether the individual identifies as White.</description>
        <inlineHelpText>Select this option if the individual identifies as being of White descent.</inlineHelpText>
        <label>White</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X100AMI__c</fullName>
        <description>Indicates individuals or households whose income exceeds 100% of the Area Median Income.</description>
        <inlineHelpText>Select this option if the individual or household&apos;s income exceeds 100% of the Area Median Income.</inlineHelpText>
        <label>&gt; 100% AMI</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3049ofAMI__c</fullName>
        <description>Indicates individuals or households whose income falls between 30% and 49% of the Area Median Income.</description>
        <inlineHelpText>Select this option if the individual or household&apos;s income is between 30% and 49% of the Area Median Income.</inlineHelpText>
        <label>30 - 49% of AMI</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X30ofAreaMedianIncomeAMI__c</fullName>
        <description>Indicates individuals or households whose income falls below 30% of the Area Median Income.</description>
        <inlineHelpText>Select this option if the individual or household&apos;s income is less than 30% of the Area Median Income.</inlineHelpText>
        <label>&lt; 30% of Area Median Income (AMI) </label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X5079ofAMI__c</fullName>
        <description>Indicates individuals or households whose income falls between 50% and 79% of the Area Median Income.</description>
        <inlineHelpText>Select this option if the individual or household&apos;s income is between 50% and 79% of the Area Median Income.</inlineHelpText>
        <label>50 - 79% of AMI</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X80100ofAMI__c</fullName>
        <description>Indicates individuals or households whose income falls between 80% and 100% of the Area Median Income.</description>
        <inlineHelpText>Select this option if the individual or household&apos;s income is between 80% and 100% of the Area Median Income.</inlineHelpText>
        <label>80 - 100% of AMI</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X9902__c</fullName>
        <label>9902</label>
        <referenceTo>X9902__c</referenceTo>
        <relationshipLabel>9902 Summary</relationshipLabel>
        <relationshipName>X9902_Summary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>9902 Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>99-{00000}</displayFormat>
        <label>9902 Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>9902 Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>